# federated

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  OWNERS  README.md  README_CN.md  RELEASE.md  RELEASE_CN.md  Third_Party_Open_Source_Software_Notice  build.sh  requirements_test.txt  setup.py
mindspore_federated/: CMakeLists.txt  __init__.py
mindspore_federated/device_client/: README_CN.md  build.gradle  cli_build.sh  settings.gradle
mindspore_federated/device_client/ut_data/: gen_lenet_data.py
mindspore_federated/device_client/ut_data/test_case/: fl_frame_ut_case.json  fl_frame_ut_case_infer.json
mindspore_federated/fl_arch/ccsrc/: CMakeLists.txt
mindspore_federated/fl_arch/ccsrc/armour/base_crypto/: base_unit.h  bloom_filter.h  ecc.cc  ecc.h  hash.cc  hash.h
mindspore_federated/fl_arch/ccsrc/armour/cipher/: cipher_init.cc  cipher_init.h  cipher_keys.cc  cipher_keys.h  cipher_meta_storage.cc  cipher_meta_storage.h  cipher_reconstruct.cc  cipher_reconstruct.h  cipher_shares.cc  cipher_shares.h  cipher_unmask.cc  cipher_unmask.h
mindspore_federated/fl_arch/ccsrc/armour/secure_protocol/: enclave_call.cc  enclave_call.h  encrypt.cc  encrypt.h  key_agreement.cc  key_agreement.h  masking.cc  masking.h  plain_intersection.cc  plain_intersection.h  psi.cc  psi.h  secret_sharing.cc  secret_sharing.h  secure_channel.h  secure_channel_client.h  secure_channel_host.h  signds.cc  signds.h  tee_cutlayer.cc  tee_cutlayer.h
mindspore_federated/fl_arch/ccsrc/armour/util/: io_util.cc  io_util.h
mindspore_federated/fl_arch/ccsrc/common/: common.h  constants.h  exit_handler.cc  exit_handler.h  fl_context.cc  fl_context.h  parallel_for.h  status.h
mindspore_federated/fl_arch/ccsrc/common/communicator/: communicator_base.cc  communicator_base.h  grpc_client.h  http_client.cc  http_client.h  http_communicator.cc  http_communicator.h  http_message_handler.cc  http_message_handler.h  http_msg_handler.cc  http_msg_handler.h  http_request_handler.cc  http_request_handler.h  http_server.cc  http_server.h  message.h  message_handler.h  request_process_result_code.h  ssl_client.cc  ssl_client.h  ssl_http.cc  ssl_http.h  ssl_wrapper.cc  ssl_wrapper.h  task_executor.cc  task_executor.h  tcp_client.cc  tcp_client.h  tcp_communicator.cc  tcp_communicator.h  tcp_message_handler.cc  tcp_message_handler.h  tcp_msg_handler.cc  tcp_msg_handler.h  tcp_server.cc  tcp_server.h  thread_pool.h
mindspore_federated/fl_arch/ccsrc/common/core/: abstract_node.cc  abstract_node.h  cluster_config.h  cluster_metadata.h  comm_util.cc  comm_util.h  configuration.h  file_configuration.cc  file_configuration.h  follower_scaler.cc  follower_scaler.h  instance_manager.cc  instance_manager.h  leader_scaler.cc  leader_scaler.h  node.cc  node.h  node_info.h  node_manager.cc  node_manager.h  node_recovery.cc  node_recovery.h  recovery_base.cc  recovery_base.h  scheduler_node.cc  scheduler_node.h  scheduler_recovery.cc  scheduler_recovery.h  server_node.cc  server_node.h  worker_node.cc  worker_node.h  yaml_config.cc  yaml_config.h
mindspore_federated/fl_arch/ccsrc/common/distributed_cache/: cache_status.h  client_infos.cc  client_infos.h  common.h  counter.cc  counter.h  distributed_cache.cc  distributed_cache.h  hyper_params.cc  hyper_params.h  instance_context.cc  instance_context.h  iteration_task_thread.cc  iteration_task_thread.h  model_info.cc  model_info.h  redis_keys.h  scheduler.cc  scheduler.h  server.cc  server.h  summary.cc  summary.h  timer.cc  timer.h  unsupervised_eval.cc  unsupervised_eval.h  worker.cc  worker.h
mindspore_federated/fl_arch/ccsrc/common/protos/: comm.proto  data_join.proto  fl.proto  vfl.proto
mindspore_federated/fl_arch/ccsrc/common/utils/: convert_utils_base.h  log_adapter.cc  log_adapter.h  log_adapter_common.cc  ms_exception.cc  ms_exception.h  python_adapter.cc  python_adapter.h  securec.h
mindspore_federated/fl_arch/ccsrc/compression/: bit_pack.h  bit_unpack.h  compress_common.h  decode_executor.cc  decode_executor.h  encode_executor.cc  encode_executor.h  min_max_compress.h  min_max_decompress.h
mindspore_federated/fl_arch/ccsrc/python/: feature_py.cc  feature_py.h  federated_job.cc  federated_job.h  federated_py.cc  fl_context.cc  fl_context.h
mindspore_federated/fl_arch/ccsrc/scheduler/: scheduler.cc  scheduler.h  scheduler_node.cc  scheduler_node.h
mindspore_federated/fl_arch/ccsrc/server/: cert_verify.cc  cert_verify.h  collective_ops_impl.cc  collective_ops_impl.h  consistent_hash_ring.cc  consistent_hash_ring.h  distributed_count_service.cc  distributed_count_service.h  distributed_metadata_store.cc  distributed_metadata_store.h  executor.cc  executor.h  iteration.cc  iteration.h  iteration_metrics.cc  iteration_metrics.h  iteration_timer.cc  iteration_timer.h  local_meta_store.cc  local_meta_store.h  memory_register.cc  memory_register.h  model_store.cc  model_store.h  parameter_aggregator.cc  parameter_aggregator.h  round.cc  round.h  server.cc  server.h  server_node.cc  server_node.h  server_recovery.cc  server_recovery.h
mindspore_federated/fl_arch/ccsrc/server/kernel/: aggregation_kernel.h  aggregation_kernel_factory.cc  aggregation_kernel_factory.h  fed_avg_kernel.cc  fed_avg_kernel.h  kernel_factory.h  (+2 more)
mindspore_federated/fl_arch/ccsrc/vertical/: common.h  vertical_server.cc  vertical_server.h  vfl_context.cc  vfl_context.h
mindspore_federated/fl_arch/ccsrc/worker/: cloud_worker.cc  cloud_worker.h  fl_worker.cc  fl_worker.h  hybrid_worker.cc  hybrid_worker.h  worker.cc  worker.h  worker_node.cc  worker_node.h
mindspore_federated/fl_arch/python/: __init__.py  _federated_local.py  log.py
mindspore_federated/fl_arch/python/common/: _fl_context.py
mindspore_federated/fl_arch/python/mindspore_federated/: __init__.py  log.py
mindspore_federated/fl_arch/python/trainer/: _fl_manager.py
mindspore_federated/schema/: cipher.fbs  fl_job.fbs
tests/ut/cpp/: CMakeLists.txt  runtest.sh
tests/ut/cpp/common/: test_main.cc
tests/ut/cpp/communicator/: vertical_comm_test_test.cc
tests/ut/cpp/psi/: find_del_wrong_test.cc  parallel_for_test.cc
(+587 files in other folders)
